--- a/src/index.css
+++ b/src/index.css
@@ -330,7 +330,7 @@ body {
 
  */
 
-
+ 
 
 #global-nav {
   position: fixed;
@@ -349,13 +349,26 @@ body {
   margin-top: -15px;
  }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 992px) {
   .collapse{
     background-color: #0091d2;
   }
+  .reg-lnk{
+    background-color: #0091d2;
+  }
+  
+.navbar-brand{
+  display: inline-block;
+  padding-top: .3125rem;
+  padding-bottom: .3125rem;
+  margin-right: 44rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+  
+}
  
 }
-
 
 
 @media only screen and (max-width: 600px) {
@@ -365,16 +378,6 @@ body {
   }
 }
 
-.navbar-brand{
-  display: inline-block;
-  padding-top: .3125rem;
-  padding-bottom: .3125rem;
-  margin-right: 13rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap;
-  
-}
 .bbaar{
   height: 60px !important;
   line-height: 60px !important;
@@ -403,12 +406,23 @@ body {
 
 }
 
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
 .bb{
   margin-top: 10px;
 }
 .App {
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -525,6 +539,7 @@ nav.scroll {
 }
 
 body > header {
+  
   margin-top: 4.7em;
 }
 
@@ -591,12 +606,13 @@ body > header {
 
 
 
-.row{
+/* .row{
   margin-top: 10px;
   margin-left: 77px;
-}
+} */
 
 .container > .content-center {
+  
   top: 37%;
 }
 .content-center{
@@ -613,7 +629,7 @@ body > header {
 }
 
 .mm{
-  position: absolute;
+ 
   width: -webkit-fill-available;
   margin-top: 960px;
   height: 783px;
@@ -621,11 +637,11 @@ body > header {
 
 .f{
 
-  position: absolute;
-  background-image: url("./bg11.jpg");
  
-  background-size:contain;
-  margin-top: 5860px;
+  
+ 
+ 
+  margin-top: 5938px;
   width: -webkit-fill-available;
 
 
@@ -668,10 +684,22 @@ body > header {
     margin-bottom: 16px!important;
 }
 
+@media only screen and (max-device-width: 750px) {
 
 
+.heading{
+  font-size: 35px;
+
+}
+}
 
 
+@media only screen and (max-device-width: 565px) {
+.heading{
+  font-size: 25px;
+
+}
+}
 
 
 
@@ -697,8 +725,59 @@ body > header {
 }
 
 @media only screen and (max-width: 600px) {
-  .reg-lnk{
-    background-color: #0091d2;
-  }
+  
+  
+.act{
+  animation:none;
+
 }
 
+  
+}
+
+
+
+.pic-div{
+  width: 100%;
+  height: 400px;
+ 
+}
+
+#back-img{
+  background-image: url('./owen-beard-K21Dn4OVxNw-unsplash.jpg');
+  /* /position: absolute; */
+  background-repeat: no-repeat;
+  
+  background-size: cover  ;
+  background-position: center center;
+}
+
+
+#back-img1{
+  background-image: url('./franck-v-HuE1cJo-x34-unsplash.jpg');
+  background-repeat: no-repeat;
+  
+  background-size: cover  ;
+  background-position: center center;
+}
+
+#back-img2{
+  background-image: url('./franck-v-JjGXjESMxOY-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: contain  ;
+}
+
+#back-img3{
+  background-image: url('./franck-v-g29arbbvPjo-unsplash.jpg');
+  background-repeat: no-repeat;
+  
+  background-size: cover  ;
+  background-position: center center;
+}
+#back-img4{
+  background-image: url('./franck-v-jIBMSMs4_kA-unsplash.jpg');
+  background-repeat: no-repeat;
+  
+  background-size: cover  ;
+  background-position: center center;
+}
