--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -2078,3 +2078,27 @@ html {
 .frm{
   border: none;
 }
+
+#delete-btn{
+  margin-top: 20px;
+}
+
+.no-btn{
+  margin-left: 100px;
+  margin-top: 10px;
+  width: 100px;
+  border-radius: 30px;
+}
+
+.yes-btn{
+ border-radius: 30px;
+  margin-top: 10px;
+  width: 100px;
+}
+
+#deleteAlert{
+  margin-top: 200px;
+}
+.del{
+  margin-top: 20px;
+}
