--- a/src/components/questioniar.scss
+++ b/src/components/questioniar.scss
@@ -7,8 +7,6 @@
     padding: 0;
 }
 
-
-
 /*form styles*/
 #msform {
     height: 900px;
@@ -62,7 +60,8 @@
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 0px;
-    margin-bottom: 10px;
+    margin-top: 35px;
+    margin-bottom: 49px;
     width: 100%;
     box-sizing: border-box;
     font-family: montserrat;
@@ -145,7 +144,7 @@
     color: red;
     text-transform: uppercase;
     font-size: 9px;
-    width: 25%;
+    width: 20%;
     float: left;
     position: relative;
     letter-spacing: 1px;
@@ -192,7 +191,6 @@
     color:  white    ;
 }
 
-
 /* Not relevant to this form */
 .dme_link {
     margin-top: 30px;
@@ -214,8 +212,10 @@
     text-decoration: none;
 }
 
-
-
 .active{
     animation: none !important;
+}
+
+#ques{
+    margin-top: 38px;
 }
